# prettyterm-rs

./: Cargo.toml  DOCUMENTATION.md  LICENSE  README.md
src/: colors.rs  common_types.rs  lib.rs  logger.rs  stylish.rs  theme_config.rs  tree_printer.rs
tests/: integration_tests.rs
